--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -39,6 +39,9 @@ jobs:
     - name: Ceck out code into the Go module directory
       uses: actions/checkout@v4
 
+    - name: Install golang migrate
+      run: curl -L https://github.com/golang-migrate/migrate/releases/download/$version/migrate.$os-$arch.tar.gz | tar xvz
+
     - name: Run migration
       run: make migrateup
 
